--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Portfolio</a>
+        <a class="nav-link" href="#">History</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Reviews</a>
+        <a class="nav-link" href="#">Superior</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href="#">IE today</a>
       </li>
     </ul>
   </div>
