added nav menu on all pages

--- a/index.html
+++ b/index.html
@@ -21,18 +21,18 @@
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">History</a>
+        <a class="nav-link" href="pages/history.html">History</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Superior</a>
+        <a class="nav-link" href="pages/superior.html">Superior</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">IE today</a>
+        <a class="nav-link" href="pages/ietoday.html">Internet Explorer today</a>
       </li>
     </ul>
   </div>
 </nav>
-    <h1>Chrome sucks!</h1>
+    <h1>The Internet Explorer Appreciation Page</h1>
     
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
