--- a/pages/ietoday.html
+++ b/pages/ietoday.html
@@ -15,7 +15,7 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
+                <ul class="navbar-nav" style="margin-left:auto;">
                     <li class="nav-item">
                         <a class="nav-link" href="../index.html">Home</a>
                     </li>
