work in progress

--- a/pages/superior.html
+++ b/pages/superior.html
@@ -9,7 +9,7 @@
         <Title>IE is the best! - Why IE is Superior</Title>
     </head>
     <body>
-        <nav class="navbar navbar-expand-lg navbar-dark bg-info">
+        <nav class="navbar navbar-expand-lg navbar-light bg-warning">
             <a class="navbar-brand" href="#">IE4Life</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -32,7 +32,14 @@
             </div>
         </nav>
     <h1>Why IE is Superior</h1>
-
+    
+    <p style="float:left; font-family: garmond; font-size: 150%;"> <img src="/Creative-Lab-1/images/ie_safe.jpg" style="float:right;width:600px;height:500px;">
+    Internet Explorer was the original browser out in the world before any of the modern browsers. Its fast design and simple to use interface truly makes
+    it a browser to be reckoned with. Even with all the other browsers in the world Internet Explorer will be Microsoft's best browser. Now it is even better
+    with a new name called Microsoft edge.
+    </p>
+    
+</div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
